Fix background img credit alignment

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url('images/halie-west-25xggax4bSA-unsplash.jpg');
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
 }
 .logo{
     position: relative;
@@ -62,9 +66,6 @@ button{
     margin: 1em 0 1em 0;
 }
 .credit{
-    position: absolute;
-    left:3em;
-    bottom: 1em;
     color:white;
 }
 .credit a{
